k8s/common/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /go
            pathType: Prefix
            backend:
              service:
                name: app-go-service
                port:
                  number: 8080
          - path: /py
            pathType: Prefix
            backend:
              service:
                name: app-python-service
                port:
                  number: 8080
